--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,9 @@
   functions = "functions"
   publish = "public"
 
+[[plugins]]
+  package = "@netlify/plugin-functions-install-core"
+
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
   #[[redirects]]
