--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,9 @@
   functions = "functions"
   publish = "public"
 
+[build.environment]
+  NODE_VERSION = "22"
+
   [[plugins]]
     package = "@netlify/plugin-functions-install-core"
 
