--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
-# example netlify.toml
 [build]
   command = "npm run build"
   functions = "functions"
@@ -7,22 +6,23 @@
 [build.environment]
   NODE_VERSION = "22"
 
+[dev]
+  command = "npm run dev"
+  targetPort = 8080
+
+[functions]
+  directory = "functions"
+
 [[plugins]]
-    package = "@netlify/plugin-functions-install-core"
+  package = "@netlify/plugin-functions-install-core"
 
-  [[redirects]]
-    from = "/api/*"
-    to = "/.netlify/functions/:splat"
-    status = 200
-  #  from = "/*"
-  #  to = "/index.html"
-  #  status = 200
+[[redirects]]
+  from = "/crxblob/*"
+  to = "https://clients2.googleusercontent.com/:splat"
+  status = 200
+  force = true
 
-  ## (optional) Settings for Netlify Dev
-  ## https://github.com/netlify/cli/blob/master/docs/netlify-dev.md#project-detection
-  #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
-
-  ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
