--- a/package.json
+++ b/package.json
@@ -7,32 +7,25 @@
     "node": ">=22"
   },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
-    "validate": "svelte-check"
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^29.0.0",
-    "@rollup/plugin-node-resolve": "^16.0.0",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@rollup/plugin-typescript": "^12.0.0",
-    "@tsconfig/svelte": "^5.0.0",
+    "@sveltejs/adapter-vercel": "^5.0.0",
+    "@sveltejs/kit": "^2.0.0",
     "@types/file-saver": "^2.0.7",
     "prettier": "^3.0.0",
-    "rollup": "^4.0.0",
-    "rollup-plugin-css-only": "^4.0.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "svelte": "^4.0.0",
+    "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "svelte-preprocess": "^6.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^6.0.0"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
-    "sirv-cli": "^3.0.0",
+    "linkedom": "^0.18.12",
     "svelte-file-dropzone": "^2.0.0"
   }
 }
